Added a second DPLL function so that you don't need to manually create the literal truth values hashmap.